# Brown_belt

./: .gitignore  .travis.yml  CMakeLists 2.txt  CMakeLists.txt  Dockerfile  README.md  generator.h  head.cpp  input.txt  main  main.cpp  plates.h  tmux_vim.md  version 2.h  version.h  version.h 2.in
booking/: booking.h  solution.cpp
booking_hotel/: booking.cpp
budget/: main.cpp
cache/: Common.h  Original_solution.cpp  Solution.cpp  main.cpp
comments_server/: solution.cpp
concurrent_map/: concurrent_map_2.cpp  solution.cpp
courses_tests/: CMakeLists.txt
courses_tests/basic_tests/: CMakeLists.txt  basic_check.cpp
demographic_stats/: print_stats.cpp
demographic_stats_tests/: a_solution.cpp  tests.cpp
domains/: domains_bad_wa.cpp  original_solution_1.cpp  original_solution_2.cpp
domains_tests/: solution.cpp  test_domains.cpp
ebook/: fast.cpp
expression/: Common.h  main.cpp  solution.cpp  test_runner.h
hash_person/: hash_person.cpp  main
hash_person/main.dSYM/Contents/Resources/DWARF/: main
hash_point/: hash_point.cpp  solution.cpp
hash_set/: CMakeLists.txt  hash_set.cpp  solution.cpp
ini_library/: config.ini  ini.cpp  ini.h  solution.cpp  test_ini.cpp  test_runner.h
json_uploader/: input.json  solution.cpp  spendings_json.cpp
lazy_value/: lazy_value.cpp
main.dSYM/Contents/Resources/DWARF/: main
object_pool/: object_pool.cpp
object_pool2/: object_pool.cpp
optional/: main.cpp
pipeline/: pipeline.cpp
point/: CMakeLists.txt  hash_point.cpp
polynomial/: polynomial.cpp
print_stats/: print_stats_2.cpp  solution.cpp
refactoring/: json.h  refactoring.cpp  solution.cpp  xml.h
restructuring/: main.cpp  stats_aggregator.cpp  stats_aggregator.h  stats_aggregator_test.cpp
secondary_index/: .secondary_index.cpp.swp  Brown  CMakeCache.txt  Makefile  cmake_install.cmake  secondary_index.cpp
set_iterator/: CMakeLists.txt  set_iterator_next.cpp  solution.cpp
synchronized/: synchronized_2.cpp
task_tracker/: team_tasks.cpp
textures/: Common.h  Solution.cpp  Textures.cpp  main.cpp  solution_original.cpp  test_runner.h
unique_ptr/: solution.cpp  unique_ptr.cpp
variant/: main.cpp
xml_uploader/: input.xml  solution.cpp  spendings_xml.cpp
zoo/: solution.cpp  zoo.cpp
